bayelvira/DataBaseParse.java
/* Generated By:JavaCC: Do not edit this line. DataBaseParse.java */
import java.util.Vector;
import java.util.Enumeration;
import java.util.Hashtable;
import Node;
import NodeList;
import Potential;
import PotentialTable;
import PotentialTree;
import Relation;
import Link;
import LinkList;
import java.io.*;


public class DataBaseParse implements DataBaseParseConstants {
 String Type;
 String Name;
 String Title;
 String Comment;
 String Author;
 String WhoChanged;
 String WhenChanged;
 String version;
 boolean locked;
 Vector Consistency;
 NodeList Nodes;
 Vector Relations;
 FiniteStates DefaultFinite;
 //ContinuousNode DefaultContinuous;
 //MixedNode DefaultMixed;
 Relation DefaultRelation;
 int casesNumber;
 int defaultnodetype;
 boolean memory;
 boolean statesdecl;





  public static void main(String args[]) throws ParseException
   ,IOException {
    FileInputStream f;

    f = new FileInputStream("ejemplo.dbc");

    DataBaseParse parser = new DataBaseParse(f);
    parser.initialize();

    parser.CompilationUnit();
    parser.Nodes.print();
    Relation relation = (Relation)parser.Relations.elementAt(0);
    CaseList cases = (CaseList)relation.getValues();
    cases.print();



  }

  public void initialize() {
    String DefaultStates[]= {"absent","present"};

   Name =  new String("");
   Title =  new String("");
   Comment =  new String("");
   Author =  new String("");
   WhoChanged =  new String("");
   WhenChanged =  new String("");
   version =  new String("1.0");
   casesNumber = 0;
   memory = false;
   Consistency = new Vector();
   Nodes = new NodeList();
   Relations = new Vector();
   DefaultFinite = new FiniteStates("Default",DefaultStates);
   DefaultRelation = new Relation();
   DefaultRelation.setKind("conditional-prob");
   DefaultFinite.setTitle("");
   DefaultFinite.setComment("");

//    parser.DefaultContinuous = new ContinuousNode();
//    parser.DefaultMixed = new MixedNode();
     defaultnodetype=1;
 }

  final public void CompilationUnit() throws ParseException {
    DataBaseDeclaration();
    jj_consume_token(45);
    jj_consume_token(0);
  }

  final public void DataBaseDeclaration() throws ParseException {
 Token T;
    databaseClass();
    T = jj_consume_token(WORD);
 Name=(T.toString());
    jj_consume_token(46);
    databaseContent();
  }

  final public void databaseClass() throws ParseException {
    jj_consume_token(DATABASE);
                Type="database";
  }

  final public void databaseContent() throws ParseException {
    label_1:
    while (true) {
      if (jj_2_1(4)) {
        ;
      } else {
        break label_1;
      }
      if (jj_2_2(4)) {
        Property();
      } else if (jj_2_3(4)) {
        DefaultDeclaration();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(47);
    }
    label_2:
    while (true) {
      if (jj_2_4(4)) {
        ;
      } else {
        break label_2;
      }
      ElementDeclaration();
    }
  }

  final public void DefaultDeclaration() throws ParseException {
 Node N;
    if (jj_2_5(4)) {
      jj_consume_token(DEFVALUE);
    } else if (jj_2_6(4)) {
      jj_consume_token(EVERY);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    if (jj_2_9(4)) {
      jj_consume_token(NODE);
      jj_consume_token(NODETYPE);
      jj_consume_token(EQUAL);
      jj_consume_token(FINITE);
                                          defaultnodetype=1;
    } else if (jj_2_10(4)) {
      jj_consume_token(NODE);
      if (defaultnodetype==1) {

      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      if (jj_2_7(4)) {
        NodeProperty(DefaultFinite);
      } else if (jj_2_8(4)) {
        FiniteProperty(DefaultFinite);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void Property() throws ParseException {
 Token T;
    if (jj_2_15(4)) {
      jj_consume_token(TITLE);
      jj_consume_token(EQUAL);
      T = jj_consume_token(STRING);
                              Title=T.image.substring(1,T.image.length()-1);
    } else if (jj_2_16(4)) {
      jj_consume_token(COMMENT);
      jj_consume_token(EQUAL);
      T = jj_consume_token(STRING);
                                Comment=T.image.substring(1,T.image.length()-1);
    } else if (jj_2_17(4)) {
      jj_consume_token(CONSISTENCY);
      jj_consume_token(EQUAL);
      jj_consume_token(OPEN_PAREN);
      jj_consume_token(CLOSE_PAREN);
    } else if (jj_2_18(4)) {
      jj_consume_token(CONSISTENCY);
      jj_consume_token(EQUAL);
      jj_consume_token(OPEN_PAREN);
      ListWords(Consistency);
      jj_consume_token(CLOSE_PAREN);
    } else if (jj_2_19(4)) {
      jj_consume_token(AUTHOR);
      jj_consume_token(EQUAL);
      T = jj_consume_token(STRING);
                                 Author=T.image.substring(1,T.image.length()-1);
    } else if (jj_2_20(4)) {
      jj_consume_token(WHOCHANGED);
      jj_consume_token(EQUAL);
      T = jj_consume_token(STRING);
                                     WhoChanged=T.image.substring(1,T.image.length()-1);
    } else if (jj_2_21(4)) {
      jj_consume_token(WHENCHANGED);
      jj_consume_token(EQUAL);
      T = jj_consume_token(STRING);
                                      WhenChanged=T.image.substring(1,T.image.length()-1);
    } else if (jj_2_22(4)) {
      jj_consume_token(LOCKED);
      jj_consume_token(EQUAL);
      T = jj_consume_token(BOOLEAN);
         if (T.image.equals("true")){locked=true;}
         else {locked=false;}
    } else if (jj_2_23(4)) {
      jj_consume_token(VERSION);
      jj_consume_token(EQUAL);
      T = jj_consume_token(FLOAT);
                              version = T.image;
    } else if (jj_2_24(4)) {
      jj_consume_token(WORD);
      jj_consume_token(EQUAL);
      if (jj_2_11(4)) {
        jj_consume_token(BOOLEAN);
      } else if (jj_2_12(4)) {
        jj_consume_token(WORD);
      } else if (jj_2_13(4)) {
        jj_consume_token(STRING);
      } else if (jj_2_14(4)) {
        jj_consume_token(DECIMAL_LITERAL);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } else if (jj_2_25(4)) {
      jj_consume_token(CASESNUMBER);
      jj_consume_token(EQUAL);
      T = jj_consume_token(DECIMAL_LITERAL);
    String temporal = new
           String(T.image.substring(0,T.image.length()));
           try{
              casesNumber = Integer.valueOf(temporal).intValue();
           }catch (NumberFormatException e){
              System.out.println(e);
           }
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void ElementDeclaration() throws ParseException {
    if (jj_2_26(4)) {
      NodeDeclaration();
    } else if (jj_2_27(4)) {
      RelationDeclaration();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void NodeDeclaration() throws ParseException {
    FiniteDeclaration();
  }

  final public void FiniteDeclaration() throws ParseException {
 FiniteStates N;
    if (jj_2_28(4)) {
      jj_consume_token(NODE);
      if (defaultnodetype==1) {

      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
                                           N = (FiniteStates)
DefaultFinite.copy();
      FiniteBody(N);
    } else if (jj_2_29(4)) {
      jj_consume_token(FINITE);
              N= (FiniteStates) DefaultFinite.copy();
      FiniteBody(N);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void FiniteBody(FiniteStates N) throws ParseException {
 Token T;
    if (jj_2_30(4)) {
      T = jj_consume_token(WORD);
                N.setName(T.image);
    } else if (jj_2_31(4)) {
      T = jj_consume_token(PARAMETER_WORD);
                         N.setName(T.image);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    if (jj_2_32(4)) {
      jj_consume_token(46);
      FiniteNodeProperties(N);
      jj_consume_token(45);
    } else if (jj_2_33(4)) {
      jj_consume_token(47);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
                                              Nodes.insertNode(N);
  }

  final public void FiniteNodeProperties(Node N) throws ParseException {
    label_3:
    while (true) {
      if (jj_2_34(4)) {
        ;
      } else {
        break label_3;
      }
      if (jj_2_35(4)) {
        NodeProperty(N);
      } else if (jj_2_36(4)) {
        FiniteProperty(N);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(47);
    }
  }

  final public void NodeProperty(Node N) throws ParseException {
 Token T;
    if (jj_2_43(4)) {
      jj_consume_token(TITLE);
      jj_consume_token(EQUAL);
      T = jj_consume_token(STRING);
                               N.setTitle(T.image.substring(1,T.image.length()-1));
    } else if (jj_2_44(4)) {
      jj_consume_token(COMMENT);
      jj_consume_token(EQUAL);
      T = jj_consume_token(STRING);
                                N.setComment(T.image.substring(1,T.image.length()-1));
    } else if (jj_2_45(4)) {
      jj_consume_token(NODEKIND);
      jj_consume_token(EQUAL);
      T = jj_consume_token(WORD);
                                N.setKindOfNode(T.image);
    } else if (jj_2_46(4)) {
      jj_consume_token(NODETYPE);
      jj_consume_token(EQUAL);
      T = jj_consume_token(FINITE);
                                  N.setTypeOfVariable(T.image);
    } else if (jj_2_47(4)) {
      jj_consume_token(POSX);
      jj_consume_token(EQUAL);
      if (jj_2_37(4)) {
        T = jj_consume_token(INTEGER);
      } else if (jj_2_38(4)) {
        T = jj_consume_token(DECIMAL_LITERAL);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
                                                       N.setPosX( Integer.valueOf(T.image).intValue() );
    } else if (jj_2_48(4)) {
      jj_consume_token(POSY);
      jj_consume_token(EQUAL);
      if (jj_2_39(4)) {
        T = jj_consume_token(INTEGER);
      } else if (jj_2_40(4)) {
        T = jj_consume_token(DECIMAL_LITERAL);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
                                                       N.setPosY( Integer.valueOf(T.image).intValue() );
    } else if (jj_2_49(4)) {
      jj_consume_token(WORD);
      jj_consume_token(EQUAL);
      if (jj_2_41(4)) {
        jj_consume_token(STRING);
      } else if (jj_2_42(4)) {
        jj_consume_token(DECIMAL_LITERAL);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void FiniteProperty(Node N) throws ParseException {
 Vector V;
 FiniteStates M;
  M = (FiniteStates) N;
    jj_consume_token(STATES);
    jj_consume_token(EQUAL);
                     V= new Vector();
    jj_consume_token(OPEN_PAREN);
    ListWords(V);
    jj_consume_token(CLOSE_PAREN);
       M.setStates(V);
  }

  final public void RelationDeclaration() throws ParseException {
 Token T;
 Vector C;
 Relation R;
    jj_consume_token(RELATION);
              R = new Relation();R.setVariables(Nodes);
    if (jj_2_50(4)) {
      jj_consume_token(47);
    } else if (jj_2_51(4)) {
      jj_consume_token(46);
      RelationProperties(R);
      jj_consume_token(45);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
                                          Relations.addElement(R);
  }

  final public void RelationProperties(Relation R) throws ParseException {
    label_4:
    while (true) {
      if (jj_2_52(4)) {
        ;
      } else {
        break label_4;
      }
      RelationProperty(R);
      jj_consume_token(47);
    }
  }

  final public void RelationProperty(Relation R) throws ParseException {
 Token T;
    if (jj_2_53(4)) {
      jj_consume_token(COMMENT);
      jj_consume_token(EQUAL);
      T = jj_consume_token(STRING);
                              R.setComment(T.image.substring(1,T.image.length()-1));
    } else if (jj_2_54(4)) {
      jj_consume_token(MEMORY);
      jj_consume_token(EQUAL);
      MemoryONOFF();
    } else if (jj_2_55(4)) {
      jj_consume_token(CASES);
      jj_consume_token(EQUAL);
      CasesDeclaration(R);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void MemoryONOFF() throws ParseException {
 Token T;
    T = jj_consume_token(BOOLEAN);
                String mem = new String(T.image.substring(0,T.image.length()));
                       memory = Boolean.valueOf(mem).booleanValue();
  }

  final public void CasesDeclaration(Relation R) throws ParseException {
  String FileAux = new String(Name+"db"+".bin");
  CaseList cases;
  if(memory == true)
       cases = (CaseList)(new CaseListMem(R.getVariables()));
  else cases = (CaseList)(new CaseListOutMem(R.getVariables(),FileAux));
    jj_consume_token(OPEN_PAREN);
    ListAssignments(cases);
    jj_consume_token(CLOSE_PAREN);
  R.setValues(cases);
  }

  final public void ListAssignments(CaseList cases) throws ParseException {
    if (jj_2_63(4)) {
      label_5:
      while (true) {
        Assignment(cases);
        if (jj_2_56(4)) {
          jj_consume_token(COMMA);
        } else {
          ;
        }
        if (jj_2_57(4)) {
          ;
        } else {
          break label_5;
        }
      }
      if (jj_2_58(4)) {
        DefaultAssignment();
      } else {
        ;
      }
      label_6:
      while (true) {
        if (jj_2_59(4)) {
          ;
        } else {
          break label_6;
        }
        Assignment(cases);
        if (jj_2_60(4)) {
          jj_consume_token(COMMA);
        } else {
          ;
        }
      }
    } else if (jj_2_64(4)) {
      DefaultAssignment();
      label_7:
      while (true) {
        if (jj_2_61(4)) {
          ;
        } else {
          break label_7;
        }
        Assignment(cases);
        if (jj_2_62(4)) {
          jj_consume_token(COMMA);
        } else {
          ;
        }
      }
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void Assignment(CaseList cases) throws ParseException {
 Vector V;
 Configuration C;
 Double D;
 Token T;
    jj_consume_token(OPEN_COR);
    V = ListWordIntegers(cases);
    jj_consume_token(CLOSE_COR);
    C = new Configuration(cases.getVariables(), V);
    cases.put(C);
  }

  final public Vector ListWordIntegers(CaseList cases) throws ParseException {
 Vector V;
 Token T;
 Integer I;
 int i;
 int j;
   V = new Vector();j=0;
    label_8:
    while (true) {
      if (jj_2_65(4)) {
        ;
      } else {
        break label_8;
      }
      if (jj_2_66(4)) {
        T = jj_consume_token(DECIMAL_LITERAL);
                         I = new Integer(T.image);V.addElement(I);j++;
      } else if (jj_2_67(4)) {
        T = jj_consume_token(WORD);
               i = (( FiniteStates) cases.getVariables().elementAt(j)).getId(T.image);

  I = new Integer(i);V.addElement(I);
               j++;
      } else if (jj_2_68(4)) {
        T = jj_consume_token(STRINGDECIMAL);
                       i = (( FiniteStates) cases.getVariables().elementAt(j)).getId(T.image.substring(1,T.image.length()-1));
               I = new Integer(i);V.addElement(I);
               j++;
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      if (jj_2_69(4)) {
        jj_consume_token(COMMA);
      } else {
        ;
      }
    }
  {if (true) return(V);}
    throw new Error("Missing return statement in function");
  }

  final public void DefaultAssignment() throws ParseException {
    jj_consume_token(DEFVALUE);
    jj_consume_token(EQUAL);
    jj_consume_token(FLOAT);
  }

  final public void ListWords(Vector C) throws ParseException {
 Token T;
    if (jj_2_79(4)) {
      if (jj_2_70(4)) {
        T = jj_consume_token(WORD);
      } else if (jj_2_71(4)) {
        T = jj_consume_token(DECIMAL_LITERAL);
      } else if (jj_2_72(4)) {
        T = jj_consume_token(PARAMETER_WORD);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
   C.addElement(T.toString());
      jj_consume_token(COMMA);
      ListWords(C);
    } else if (jj_2_80(4)) {
      if (jj_2_73(4)) {
        T = jj_consume_token(WORD);
      } else if (jj_2_74(4)) {
        T = jj_consume_token(DECIMAL_LITERAL);
      } else if (jj_2_75(4)) {
        T = jj_consume_token(PARAMETER_WORD);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
   C.addElement(T.toString());
      ListWords(C);
    } else if (jj_2_81(4)) {
      if (jj_2_76(4)) {
        T = jj_consume_token(WORD);
      } else if (jj_2_77(4)) {
        T = jj_consume_token(DECIMAL_LITERAL);
      } else if (jj_2_78(4)) {
        T = jj_consume_token(PARAMETER_WORD);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
   C.addElement(T.toString());
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_1();
    jj_save(0, xla);
    return retval;
  }

  final private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_2();
    jj_save(1, xla);
    return retval;
  }

  final private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_3();
    jj_save(2, xla);
    return retval;
  }

  final private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_4();
    jj_save(3, xla);
    return retval;
  }

  final private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_5();
    jj_save(4, xla);
    return retval;
  }

  final private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_6();
    jj_save(5, xla);
    return retval;
  }

  final private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_7();
    jj_save(6, xla);
    return retval;
  }

  final private boolean jj_2_8(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_8();
    jj_save(7, xla);
    return retval;
  }

  final private boolean jj_2_9(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_9();
    jj_save(8, xla);
    return retval;
  }

  final private boolean jj_2_10(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_10();
    jj_save(9, xla);
    return retval;
  }

  final private boolean jj_2_11(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_11();
    jj_save(10, xla);
    return retval;
  }

  final private boolean jj_2_12(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_12();
    jj_save(11, xla);
    return retval;
  }

  final private boolean jj_2_13(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_13();
    jj_save(12, xla);
    return retval;
  }

  final private boolean jj_2_14(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_14();
    jj_save(13, xla);
    return retval;
  }

  final private boolean jj_2_15(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_15();
    jj_save(14, xla);
    return retval;
  }

  final private boolean jj_2_16(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_16();
    jj_save(15, xla);
    return retval;
  }

  final private boolean jj_2_17(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_17();
    jj_save(16, xla);
    return retval;
  }

  final private boolean jj_2_18(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_18();
    jj_save(17, xla);
    return retval;
  }

  final private boolean jj_2_19(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_19();
    jj_save(18, xla);
    return retval;
  }
